<resources>
    <string name="app_name">DialogWebView-1-Mubs</string>
    <string name="action_settings">Settings</string>
    <string name="go">Go</string>
    <string name="where_do_you_want_to_go">where do you want to go</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="registration">registration</string>
    <string name="nickname">Nickname</string>
    <string name="confirm">Confirm</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="gender">Gender :</string>
    <string name="i_agree_for_the_term_of_use">I agree for the term of use</string>
    <string name="submit">Submit</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="creating_an_account_means_you_re_ok_with_perfect_n_audience_s_terms_of_service_and_privacy_policy">creating an account means you\'re ok with perfect n audience s terms of service and privacy policy</string>
    <string name="sign_up_for_new_account">Sign up for new account!</string>
    <string name="email">email</string>
    <string name="hello_there">Hello there!</string>
</resources>
