<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="15dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:id="@+id/edt_username" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/edt_password"
            android:layout_marginTop="10dp"/>

    </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_login"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>
</RelativeLayout>