<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginResultActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:id="@+id/rounded_rectangle"
        android:layout_marginStart="0dp"
        android:src="@drawable/roundedrectangle" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/fatihh"
        android:id="@+id/profile"
        android:layout_marginTop="220dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:text="@string/app_name"
        android:layout_marginTop="30dp"
        android:id="@+id/tv_name"
        android:fontFamily="@font/qualio"
        android:textSize="35sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:text="@string/app_name"
        android:layout_margin="20dp"
        android:id="@+id/tv_password"
        android:fontFamily="@font/qualio"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_there"
        android:gravity="center"
        android:textSize="70sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/personaluse"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_email_home"
        android:textSize="@dimen/sp_ten"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_below="@+id/profile"
        android:textStyle="bold"
        android:text="@string/email"/>


</RelativeLayout>